unpackaged/main/default/objects/project_cloud__Meeting_Attendee__c/project_cloud__Meeting_Attendee__c.object-meta.xml
<CustomObject>
    <label>Meeting Attendee</label>
    <nameField>
        <displayFormat>ATNDE-{0}</displayFormat>
        <label>Attendee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>