unpackaged/main/default/objects/project_cloud__Meeting_Attendee__c/fields/project_cloud__Access_Level__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Access_Level__c</fullName>
    <inlineHelpText>This picklist will allow Meeting Managers to determine who will be a Viewer or a Manager on the Meeting. This will specify if a user can view meeting minutes or contribute to the meeting minutes.</inlineHelpText>
    <label>Access Level</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manage</fullName>
            </value>
            <value>
                <fullName>View</fullName>
                <default>true</default>
                <label>View</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>