unpackaged/main/default/objects/project_cloud__Meeting_Attendee__c/fields/project_cloud__Contact__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field allows users to associate Contacts to the Meeting.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Meeting Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>