unpackaged/main/default/objects/project_cloud__Meeting_Attendee__c/fields/project_cloud__IsAttended__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__IsAttended__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the user has attended the meeting.</inlineHelpText>
    <label>Attended</label>
    <type>Checkbox</type>
</CustomField>