unpackaged/main/default/objects/project_cloud__Meeting_Attendee__c/fields/project_cloud__Meeting__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Meeting__c</fullName>
    <inlineHelpText>This field show what Meeting the Meeting Attendee is related too.</inlineHelpText>
    <label>Meeting</label>
    <referenceTo>project_cloud__Meeting__c</referenceTo>
    <relationshipLabel>Meeting Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>