unpackaged/main/default/objects/project_cloud__Meeting_Attendee__c/fields/project_cloud__User__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field allows users to associate Users to the Meeting if they have a Cloud Coach License.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>