unpackaged/main/default/objects/project_cloud__Meeting_Attendee__c/validationRules/project_cloud__Attendee_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>project_cloud__Attendee_Required</fullName>
    <active>true</active>
    <description>A Meeting Attendee requires a person t o be selected, either a Contact or User</description>
    <errorConditionFormula>IF(ISBLANK(project_cloud__User__c), 0, 1) + IF(ISBLANK(project_cloud__Contact__c), 0, 1) != 1</errorConditionFormula>
    <errorMessage>A Meeting Attendee requires a single User or Contact to be specified.</errorMessage>
</ValidationRule>